# geo-stac-api

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  geojson.sample  pyproject.toml
scripts/: database_setup.sql
src/: main.py
src/api/common/: dependencies.py
src/api/v1/routers/: geo_routers.py
src/api/v1/schemas/: geo_schemas.py
src/config/: base.py
src/database/common/: dependencies.py
src/database/postgres/: core.py  handler.py
src/models/: geo_models.py
src/services/: stac_service.py
src/utils/: geo_utils.py
tests/: conftest.py
tests/api/v1/routers/: test_geo_routers.py
tests/database/postgres/: test_core.py  test_handler.py
tests/services/: test_stac_service.py
tests/utils/: test_geo_utils.py
