[tool.poetry]
name = "geo-stac-api"
version = "0.1.0"
description = ""
authors = ["Koosha Sangari <ko.sangari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.27"
asyncio = "^3.4.3"
mypy = "^1.8.0"
pystac-client = "^0.7.6"
geoalchemy2 = {extras = ["shapely"], version = "^0.14.6"}
asyncpg = "^0.29.0"
planetary-computer = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
coverage = "^7.4.3"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false
exclude = [".venv"]
